updated with Paytm template

--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "final-form": "^4.19.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-credit-cards": "^0.8.0",
     "react-dom": "^16.13.1",
     "react-dropdown-input": "^0.1.11",
+    "react-final-form": "^6.4.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.0.1",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
