--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,8 +12,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "express-validator": "^6.4.0"
+    "express-validator": "^6.4.0",
+    "firebase": "^7.13.2",
+    "path": "^0.12.7",
+    "razorpay": "^2.0.6",
+    "request": "^2.88.2",
+    "url": "^0.11.0"
   }
 }
