--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "ejs": "^3.0.2",
     "final-form": "^4.19.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
