--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "http://hgupta2363.github.io/prescrie_deploy",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -13,6 +14,8 @@
     "final-form": "^4.19.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
+    "firebase-tools": "^8.0.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-credit-cards": "^0.8.0",
@@ -28,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
