--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
