--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "http://hgupta2363.github.io/prescrie_deploy",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -9,8 +8,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "final-form": "^4.19.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
@@ -28,13 +30,14 @@
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "deploy": "aws s3 sync build/ s3://prescribe-web-app --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
