--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^8.10.0",
     "firebase-tools": "^8.0.1",
     "gh-pages": "^2.2.0",
+    "query-string": "^6.11.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-credit-cards": "^0.8.0",
